--- a/viraL/index.html
+++ b/viraL/index.html
@@ -448,7 +448,9 @@
 					<center><script type='text/javascript' src='//obligedmeditatedazed.com/00/2f/1d/002f1dda18a858f4b6aa441e527f428b.js'></script></center>
 					
                     <a href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7" target="_blank" class="trailer-link">
-                        <img src="main.jpg" alt="Movie Scene" class="trailer-image">
+                            <video class="trailer-image" autoplay muted loop playsinline>
+							<source src="main.mp4" type="video/mp4">
+						</video>
                         <div class="play-icon"><i class="fas fa-play-circle"></i></div>
                         <!-- Video Controls -->
                         <div class="video-controls">
