--- a/viraL/index.html
+++ b/viraL/index.html
@@ -494,7 +494,7 @@
                 <div class="col">
                     <a href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7" target="_blank" class="text-decoration-none">
                         <div class="movie-card">
-                            <img src="1.webp" alt="Movie Poster">
+                            <img src="1.webp" alt="Movie Poster" loading="lazy">
                             <div class="play-icon"><i class="fas fa-play-circle"></i></div>
                         </div>
                         <h6 class="movie-title">American school girl</h6>
@@ -504,7 +504,7 @@
                 <div class="col">
                      <a href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7" target="_blank" class="text-decoration-none">
                         <div class="movie-card">
-                            <img src="2.jpeg" alt="Movie Poster">
+                            <img src="2.jpeg" alt="Movie Poster" loading="lazy">
                             <div class="play-icon"><i class="fas fa-play-circle"></i></div>
                         </div>
                         <h6 class="movie-title">Tamil College Sex Porn Videos</h6>
@@ -514,7 +514,7 @@
                 <div class="col">
                     <a href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7" target="_blank" class="text-decoration-none">
                         <div class="movie-card">
-                            <img src="3.jpg" alt="Movie Poster">
+                            <img src="3.jpg" alt="Movie Poster" loading="lazy">
                             <div class="play-icon"><i class="fas fa-play-circle"></i></div>
                         </div>
                         <h6 class="movie-title">Indian College Students sex videos</h6>
@@ -524,7 +524,7 @@
                  <div class="col">
                     <a href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7" target="_blank" class="text-decoration-none">
                         <div class="movie-card">
-                            <img src="4.webp" alt="Movie Poster">
+                            <img src="4.webp" alt="Movie Poster" loading="lazy">
                             <div class="play-icon"><i class="fas fa-play-circle"></i></div>
                         </div>
                         <h6 class="movie-title">Hareem Shah Videos Best XXX 2025</h6>
@@ -534,7 +534,7 @@
                 <div class="col">
                      <a href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7" target="_blank" class="text-decoration-none">
                         <div class="movie-card">
-                            <img src="5.jpg" alt="Movie Poster">
+                            <img src="5.jpg" alt="Movie Poster" loading="lazy">
                             <div class="play-icon"><i class="fas fa-play-circle"></i></div>
                         </div>
                         <h6 class="movie-title">Hard Rough sex Videos Best 2025</h6>
@@ -544,7 +544,7 @@
                 <div class="col">
                      <a href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7" target="_blank" class="text-decoration-none">
                         <div class="movie-card">
-                            <img src="6.webp" alt="Movie Poster">
+                            <img src="6.webp" alt="Movie Poster" loading="lazy">
                             <div class="play-icon"><i class="fas fa-play-circle"></i></div>
                         </div>
                         <h6 class="movie-title">Sapna shah Viral video Clip</h6>
@@ -611,3 +611,4 @@ hs.src = ('//s10.histats.com/js15_as.js');
 })();</script>
 <noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4949556&101" alt="counter customizable free hit" border="0"></a></noscript>
 <!-- Histats.com  END  -->
+
